################################################################################
#	\file configure.in
#	\author Gregory Diamos
#	\date Monday Auguest 3, 2009
# 	\brief Autoconf input file describing the checks that need to be performed 
#			to create a configure script for the ocelot sdk2.3 regression test
#			project.
################################################################################

################################################################################
## Package specification
# Revision scheme is MajorFeatureSet.MinorFeatureSet.SVNChangelistNumber
AC_PREREQ(2.61)
AC_INIT(ocelot_Sdk_2.3_Regression_Suite, 0.1.72, gregory.diamos@gatech.edu)
AM_INIT_AUTOMAKE([])
################################################################################

################################################################################
## Configure autoconf
AC_USE_SYSTEM_EXTENSIONS
AC_CONFIG_MACRO_DIR([m4])
################################################################################

################################################################################
## Package Configuration
AC_CONFIG_HEADER([configure.h])
################################################################################

################################################################################
# Check for non-compiler programs
AC_CHECK_PROG(HAVE_LLVM_CONFIG, llvm-config, yes, no)

if test $HAVE_LLVM_CONFIG = yes
then
	LLVM_VERSION=$(llvm-config --version)
	if test $LLVM_VERSION = 2.7svn
	then
		AC_DEFINE(HAVE_LLVM, [], ["Define to 1 if llvm is installed"])
		AC_SUBST(LLVM_CFLAGS, $(llvm-config --cppflags))
		AC_SUBST(LLVM_LDFLAGS, "$(llvm-config --ldflags --libs core jit native \
			asmparser instcombine | tr '\n' ' ') -rdynamic")
	else
		AC_WARN(LLVM Support Not Enabled: version $LLVM_VERSION found but \
			requires 2.7svn )
		AC_SUBST(LLVM_CFLAGS, "")
		AC_SUBST(LLVM_LDFLAGS, "")
	fi
else
	AC_SUBST(LLVM_CFLAGS, "")
	AC_SUBST(LLVM_LDFLAGS, "")
fi
################################################################################

################################################################################
## Checks for libraries.
AC_CHECK_LIB([rt], [clock_gettime], [], \
	AC_MSG_ERROR("librt required"))
AC_CHECK_LIB([GL], [glIsTexture], [], \
	AC_MSG_ERROR("libGL required"))
AC_CHECK_LIB([GLEW], [glewInit], [], \
	AC_MSG_ERROR("libGLEW required"))
AC_CHECK_LIB([GLU], [gluGetString], [], \
	AC_MSG_ERROR("libGLU required"))
AC_CHECK_LIB([glut], [glutMainLoop], [], \
	AC_MSG_ERROR("libglut required"))

AC_CHECK_LIB([cuda], [cuInit], HAVE_CUDA_DRIVER_API=yes, \
	HAVE_CUDA_DRIVER_API=no)

if test $HAVE_CUDA_DRIVER_API = yes
then
	AC_DEFINE(HAVE_CUDA_DRIVER_API, [1], \
		["Define to 1 if the cuda driver api is found"])
	AC_SUBST(CUDA_DRIVER_API_LIBARY, "-lcuda")
else
	AC_DEFINE(HAVE_CUDA_DRIVER_API, [0], \
	["Define to 1 if the cuda driver api is found"])
	AC_SUBST(CUDA_DRIVER_API_LIBARY, "")
fi

AC_CHECK_LIB([ocelot], [main],[AC_DEFINE(HAVE_OCELOT, [], [""])], \
	AC_MSG_ERROR("libocelot required"), [$LLVM_LDFLAGS])
AC_CHECK_LIB([cufft], [main], [AC_DEFINE(HAVE_CUFFT, [], [""])], \
	AC_MSG_ERROR("libcufft required"), [-locelot \
	$LLVM_LDFLAGS $CUDA_DRIVER_API_LIBARY])
AC_CHECK_LIB([cublas], [main], [AC_DEFINE(HAVE_CUBLAS, [], [""])], \
	AC_MSG_ERROR("libcublas required"), [-locelot $LLVM_LDFLAGS \
	$CUDA_DRIVER_API_LIBARY])
################################################################################

################################################################################
## Checks for programs.
AC_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CC
AM_PROG_CC_C_O
################################################################################

################################################################################
# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])
################################################################################

################################################################################
# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
################################################################################

################################################################################
# Checks for library functions.
AC_CHECK_FUNCS([memset])
################################################################################

################################################################################
## Output generation
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
################################################################################

